--- a/fra-sih/frontend/package.json
+++ b/fra-sih/frontend/package.json
@@ -12,15 +12,19 @@
   "dependencies": {
     "@react-three/fiber": "^9.3.0",
     "@tailwindcss/vite": "^4.1.13",
+    "axios": "^1.12.2",
     "clsx": "^2.1.1",
+    "lucide-react": "^0.544.0",
     "motion": "^12.23.13",
+    "postprocessing": "^6.37.8",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-router-dom": "^7.9.1",
     "react-toastify": "^11.0.5",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.13",
-    "three": "^0.180.0"
+    "three": "^0.180.0",
+    "zustand": "^5.0.8"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
