--- a/fra-sih/frontend/package.json
+++ b/fra-sih/frontend/package.json
@@ -14,11 +14,13 @@
     "@tailwindcss/vite": "^4.1.13",
     "axios": "^1.12.2",
     "clsx": "^2.1.1",
+    "leaflet": "^1.9.4",
     "lucide-react": "^0.544.0",
     "motion": "^12.23.13",
     "postprocessing": "^6.37.8",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-leaflet": "^5.0.0",
     "react-router-dom": "^7.9.1",
     "react-toastify": "^11.0.5",
     "tailwind-merge": "^3.3.1",
@@ -28,6 +30,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
+    "@types/leaflet": "^1.9.20",
     "@types/react": "^19.1.10",
     "@types/react-dom": "^19.1.7",
     "@vitejs/plugin-react": "^5.0.0",
